fixed broken dark mode

--- a/style.css
+++ b/style.css
@@ -101,24 +101,19 @@ a:hover {
     width: 500px;
   }
 }
+
 @media (max-width: 720px) {
   /* For a screen < 720px, this CSS will be read */
   .card {
     width: 400px;
   }
 }
+
 @media (max-width: 540px) {
   /* For a screen < 540px, this CSS will be read */
   .card {
     width: 300px;
   }
-
-@media (max-width: 320px) {
-  /* For a screen < 320px, this CSS will be read */
-  .card {
-    width: 220px;
-  }
-}
 
 @media (prefers-color-scheme: dark) {
   body {
@@ -144,7 +139,7 @@ a:hover {
   color: #FCFBF7;
 }
 
-h2 {
-  color: #2BAEA2;
-}
+  h2 {
+    color: #2BAEA2;
+  }
 }
